style: change animation

--- a/scss/partials/helpers/_animations.scss
+++ b/scss/partials/helpers/_animations.scss
@@ -44,7 +44,7 @@
     }
 }
 
-@keyframes slideInFromLeft {
+@keyframes slideInFromRight {
     0% {
         transform: translateX(300%);
         -webkit-transform: translateX(300%);
