--- a/scss/partials/components/_buttons.scss
+++ b/scss/partials/components/_buttons.scss
@@ -13,6 +13,7 @@
     transition: .25s;
     box-shadow: 0.6rem 0.6rem 0 0 $color-secondary, inset 0.6rem 0.6rem 0 $color-secondary;
     cursor: pointer;
+    z-index: 1000;
 
     &:hover,
     &:focus {
@@ -32,7 +33,7 @@
     }
 
     @include screen(tablet) {
-        font-size: $font-size-xxs;
+        font-size: $font-size-s;
         margin-top: 20px;
 
         @include orientation(landscape) {
