--- a/scss/partials/layout/_contact.scss
+++ b/scss/partials/layout/_contact.scss
@@ -1,201 +1,469 @@
 .contact {
-    height: 70vh;
+    height: 130vh;
+    position: relative;
     @include flexbox;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     padding: 20px 10px;
-    color: $color-secondary;
-    background: $color-white;
-    font-size: $font-size-xs;
-    overflow: hidden;
+    margin: 30px 0;
+    color: #035E8C;
 
     @include screen(mobile) {
-        @include orientation(landscape) {
-            height: 90vh;
+        height: 140vh;
+
+        @include orientation (landscape) {
+            height: 180vh;
+            margin: 20px 0;
         }
     }
 
     @include screen(tablet) {
-        height: 30vh;
-        padding: 0px 60px;
-        background-color: $color-secondary;
-        color: $color-white;
-        font-size: $font-size-s;
+        height: 120vh;
 
-        @include orientation(landscape) {
-            height: 60vh;
-            font-size: $font-size-xs;
+        @include orientation (landscape) {
+            height: 190vh;
+            margin: 20px 0;
         }
     }
 
     @include screen(desktop) {
-        font-size: $font-size-m;
-
-        @include orientation(landscape) {
-            height: 40vh;
-            font-size: $font-size-xs;
-        }
-    }
-
-    @include rwd(1365) {
-        @include orientation(landscape) {
-            height: 30vh;
-            font-size: $font-size-m;
+        @include orientation (landscape) {
+            height: 140vh;
         }
     }
 
     @include screen(big-desktop) {
-        height: 40vh;
-        font-size: $font-size-s;
+        height: 80vh;
+        flex-direction: row;
+        margin: 0;
+        background-image: url(../img/contact-bg.webp);
+        background-position: center;
+        background-size: cover;
     }
 
-    &__label {
-        position: relative;
-        width: 80%;
-        height: 30%;
-        @include flexbox;
-        align-items: center;
-        text-align: center;
-        padding: 10px;
-        margin-bottom: 10px;
-        border: 1px solid $color-secondary;
-        line-height: 1.7;
-        color: $color-white;
-        background-color: $color-secondary;
-        box-shadow:
-            0 20px 10px -15px rgba(0, 0, 0, 0.5),
-            0 20px 30px -20px rgba(0, 0, 0, 0.4),
-            0 20px 20px -30px rgba(0, 0, 0, 0.3),
-            0 20px 20px -5px $color-secondary;
+    &::before {
+        content: '';
+        position: absolute;
+        top: -5%;
+        left: 0;
+        height: 20px;
+        width: 100%;
+        background-color: #ffffff;
+        opacity: 0.4;
+        background-size: 14px 14px;
+        background-image: repeating-linear-gradient(45deg, #035E8C 0, #035E8C 1.4000000000000001px, #ffffff 0, #ffffff 50%);
         z-index: 1;
 
         @include screen(mobile) {
-            padding: 10px 40px;
-            margin-bottom: 0;
-            line-height: 2;
+            top: -4%;
 
-            @include orientation(landscape) {
-                width: 40%;
-                height: 35%;
-                padding: 10px 20px;
+            @include height(700) {
+                top: -2%;
+            }
+
+            @include orientation (landscape) {
+                top: -5%;
             }
         }
 
         @include screen(tablet) {
-            width: 55%;
-            height: 50%;
-            padding: 10px 50px;
-            color: $color-secondary;
-            background-color: $color-white;
-            border-color: $color-white;
+            top: -2%;
 
-            @include orientation(landscape) {
-                width: 50%;
+            @include orientation (landscape) {
+                top: -5%;
+            }
+        }
+
+        @include screen(desktop) {
+            top: -1%;
+        }
+
+        @include screen(big-desktop) {
+            display: none;
+        }
+    }
+
+    &__wrapper {
+        height: 50%;
+        position: relative;
+        @include flexbox;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+
+        @include screen(mobile) {
+            @include height(700) {
+                height: 40%;
+            }
+        }
+
+        @include screen(big-desktop) {
+            height: 60%;
+            left: 7%;
+        }
+    }
+
+    &__heading {
+        width: 70%;
+        font-size: $font-size-xs;
+        text-align: center;
+        line-height: 1.7;
+
+        @include screen(mobile) {
+            width: 75%;
+            font-size: $font-size-s;
+
+            @include orientation (landscape) {
+                width: 65%;
+                font-size: $font-size-xs;
+            }
+        }
+
+        @include screen(tablet) {
+            width: 65%;
+            font-size: $font-size-m;
+
+            @include orientation (landscape) {
+                font-size: $font-size-s;
+            }
+        }
+
+        @include screen(desktop) {
+            font-size: $font-size-l;
+
+            @include orientation (landscape) {
+                width: 60%;
+                font-size: $font-size-m;
+            }
+        }
+
+        @include rwd(1365) {
+            @include orientation (landscape) {
+                font-size: $font-size-l;
+            }
+        }
+
+        @include screen(big-desktop) {
+            font-size: $font-size-s;
+            width: 60%;
+        }
+    }
+
+    &__phone {
+        height: 10%;
+        @include flexbox;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        font-size: $font-size-xxs;
+        color: #035E8C;
+        cursor: pointer;
+
+        &:hover {
+            color: darken(#035E8C, 80%);
+        }
+
+        @include screen(mobile) {
+            font-size: $font-size-xs;
+
+            @include orientation (landscape) {
+                height: 10%;
+                font-size: $font-size-xxs;
+            }
+        }
+
+        @include screen(tablet) {
+            font-size: $font-size-s;
+
+            @include orientation (landscape) {
                 font-size: $font-size-xs;
             }
         }
 
         @include screen(desktop) {
-            @include orientation(landscape) {
-                height: 40%;
-                width: 45%;
+            font-size: $font-size-m;
+
+            @include orientation (landscape) {
                 font-size: $font-size-s;
             }
         }
 
         @include rwd(1365) {
-            @include orientation(landscape) {
-                height: 50%;
-                width: 40%;
+            @include orientation (landscape) {
                 font-size: $font-size-m;
             }
         }
 
         @include screen(big-desktop) {
-            width: 35%;
-            padding: 10px 100px;
-            font-size: $font-size-s;
-        }
-
-        &::after {
-            content: "\A";
-            border-style: solid;
-            border-width: 50px 50px 50px 0;
-            border-color: transparent $color-secondary transparent transparent;
-            position: absolute;
-            left: -15px;
-            z-index: -1;
-
-            @include screen(mobile) {
-
-                @include orientation(landscape) {
-                    border-width: 30px 30px 30px 0;
-                }
-            }
-
-            @include screen (tablet) {
-                border-color: transparent $color-white transparent transparent;
-            }
-        }
-    }
-
-    &__options {
-        height: 50%;
-        @include flexbox;
-        align-items: center;
-        justify-content: space-beetwen;
-        flex-direction: column;
-
-        @include screen(mobile) {
-            @include orientation(landscape) {
-                height: 20%;
-                width: 100%;
-                flex-direction: row;
-                justify-content: space-around;
-            }
-        }
-
-        @include screen(tablet) {
-            width: 100vw;
+            font-size: $font-size-xs;
             height: 20%;
-            flex-direction: row;
-            justify-content: space-around;
-        }
-    }
-
-    &__option {
-        height: 30%;
-        @include flexbox;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-beetwen;
-        margin-bottom: 30px;
-
-        @include screen(tablet) {
-            flex-direction: row;
         }
     }
 
     &__icon {
-        font-size: $font-size-m;
-        padding-bottom: 10px;
+        font-size: $font-size-s;
+
+        @include screen(mobile) {
+            font-size: $font-size-m;
+
+            @include orientation (landscape) {
+                font-size: $font-size-s;
+            }
+        }
 
         @include screen(tablet) {
-            margin-right: 10px;
+            font-size: $font-size-l;
 
+            @include orientation (landscape) {
+                font-size: $font-size-m;
+            }
         }
 
         @include screen(desktop) {
-            font-size: $font-size-l;
+            font-size: $font-size-xl;
+
+            @include orientation (landscape) {
+                font-size: $font-size-l;
+            }
+        }
+
+        @include rwd(1365) {
+            @include orientation (landscape) {
+                font-size: $font-size-xl;
+            }
+        }
+
+        @include screen(big-desktop) {
+            font-size: $font-size-s;
         }
     }
 
-    &__mobile-number {
-        color: $color-secondary;
+    &__form {
+        height: 60%;
+        width: 90%;
+        position: relative;
+        @include flexbox;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        padding: 10px 0;
+        background-color: darken($color-white, 2%);
+        border-radius: 5%;
+        -webkit-border-radius: 5%;
+        -moz-border-radius: 5%;
+        -ms-border-radius: 5%;
+        -o-border-radius: 5%;
+        box-shadow: 0 2px 2px rgba(0, 0, 0, 0.01), 0 4px 4px rgba(0, 0, 0, 0.02),
+            0 8px 8px rgba(0, 0, 0, 0.03), 0 18px 18px rgba(0, 0, 0, 0.04),
+            0 28px 28px rgba(0, 0, 0, 0.05), 0 38px 38px rgba(0, 0, 0, 0.06);
+
+        @include screen(mobile) {
+            height: 50%;
+
+            @include orientation (landscape) {
+                width: 60%;
+            }
+        }
+
+        @include screen(tablet) {
+            width: 70%;
+        }
 
         @include screen(big-desktop) {
-            color: $color-white;
+            height: 85%;
+            width: 25%;
+            right: 5%;
         }
+    }
+
+    &__label {
+        position: relative;
+        left: 0;
+        font-size: $font-size-xxs;
+
+        @include screen(mobile) {
+            font-size: $font-size-xs;
+
+            @include orientation (landscape) {
+                font-size: $font-size-xxs;
+            }
+        }
+
+        @include screen(tablet) {
+            font-size: $font-size-s;
+
+            @include orientation (landscape) {
+                font-size: $font-size-xs;
+            }
+        }
+
+        @include screen(desktop) {
+            font-size: $font-size-m;
+
+            @include orientation (landscape) {
+                font-size: $font-size-s;
+            }
+        }
+
+        @include rwd(1365) {
+            @include orientation (landscape) {
+                font-size: $font-size-m;
+            }
+        }
+
+        @include screen(big-desktop) {
+            font-size: $font-size-xs;
+        }
+    }
+
+    &__input {
+        width: 80%;
+        border: none;
+        border-bottom: 1px solid #035E8C;
+        background-color: transparent;
+        color: #035E8C;
+
+        @include screen(mobile) {
+            font-size: $font-size-xxs;
+
+            @include orientation (landscape) {
+                width: 70%;
+                font-size: 1rem;
+            }
+        }
+
+        @include screen(tablet) {
+            font-size: $font-size-xs;
+
+            @include orientation (landscape) {
+                font-size: $font-size-xxs;
+            }
+        }
+
+        @include screen(desktop) {
+            font-size: $font-size-s;
+
+            @include orientation (landscape) {
+                font-size: $font-size-xs;
+            }
+        }
+
+        @include rwd(1365) {
+            @include orientation (landscape) {
+                font-size: $font-size-s;
+            }
+        }
+
+        @include screen(big-desktop) {
+            font-size: $font-size-xxs;
+        }
+    }
+
+    &__textarea {
+        height: 30%;
+        width: 80%;
+        border-color: #035E8C;
+        background-color: transparent;
+        resize: none;
+
+        @include screen(mobile) {
+            font-size: $font-size-xxs;
+
+            @include orientation (landscape) {
+                width: 70%;
+                font-size: 1rem;
+            }
+        }
+
+        @include screen(tablet) {
+            font-size: $font-size-xs;
+
+            @include orientation (landscape) {
+                font-size: $font-size-xxs;
+            }
+        }
+
+        @include screen(desktop) {
+            font-size: $font-size-s;
+
+            @include orientation (landscape) {
+                font-size: $font-size-xs;
+            }
+        }
+
+        @include rwd(1365) {
+            @include orientation (landscape) {
+                font-size: $font-size-s;
+            }
+        }
+
+        @include screen(big-desktop) {
+            font-size: $font-size-xxs;
+        }
+    }
+
+    &__btn {
+        background-color: #035E8C;
+        font-size: $font-size-xxs;
+        color: $color-white;
+        border: 0;
+        padding: 5px 20px;
+        transition: .15s background-color;
+        cursor: pointer;
+
+        @include screen(mobile) {
+            font-size: $font-size-xs;
+
+            @include orientation (landscape) {
+                font-size: $font-size-xxs;
+            }
+        }
+
+        @include screen(tablet) {
+            font-size: $font-size-s;
+
+            @include orientation (landscape) {
+                font-size: $font-size-xs;
+            }
+        }
+
+        @include screen(desktop) {
+            font-size: $font-size-m;
+
+            @include orientation (landscape) {
+                font-size: $font-size-s;
+            }
+        }
+
+        @include rwd(1365) {
+            @include orientation (landscape) {
+                font-size: $font-size-m;
+            }
+        }
+
+        @include screen(big-desktop) {
+            font-size: $font-size-xs;
+        }
+
+        &:hover {
+            background-color: darken(#035E8C, 10%);
+        }
+    }
+}
+
+.fa-arrow-circle-right {
+    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+
+    @include screen(big-desktop) {
+        transform: rotate(0);
+        -webkit-transform: rotate(0);
+        -moz-transform: rotate(0);
+        -ms-transform: rotate(0);
+        -o-transform: rotate(0);
     }
 }
